syntax = "proto3";

service Logger {
  rpc GetCount (GetCountRequest) returns (GetCountResponse) {}
  rpc CountUp (CountUpMessage) returns (CountUpResponse) {}
}

message GetCountRequest {
  string target_cat = 1;
}

message GetCountResponse {
  string name = 1;
  string kind = 2;
}

message CountUpMessage {
  string target_cat = 1;
}

message CountUpResponse {
  string name = 1;
  string kind = 2;
}
